<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_background"
    android:orientation="horizontal"
    android:gravity="center">
    <Button
        android:id="@+id/remote_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg"
        android:text="@string/alarm_btn_reset"
        android:textSize="@dimen/common_textsize_big"
        android:textColor="@drawable/bg_alarm_text_selector"
        android:contentDescription="@string/nothing" />

    <Button
        android:id="@+id/remote_save_button"
        android:layout_marginLeft="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg"
        android:text="@string/alarm_btn_open"
        android:textSize="@dimen/common_textsize_big"
        android:textColor="@drawable/bg_alarm_text_selector"
        android:contentDescription="@string/nothing" />

</LinearLayout>
