<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alarm_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qihancloud.alarmstrategy.StrangerConfigActivity">



    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/stranger_scroll_margin_bottom"
        android:layout_marginTop="@dimen/home_page_name_margin_top"
        android:layout_marginLeft="@dimen/activity_line_toleft"
        android:layout_marginRight="@dimen/activity_line_toright"
        android:scrollbars="none"
        android:overScrollMode="never">


        <LinearLayout
            android:id="@+id/other_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_list_height"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/alarm_notify"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_textsize_middle" />

                <ToggleButton
                    android:id="@+id/stranger_notify_toggle"
                    android:layout_width="@dimen/alarm_togglebtn_width"
                    android:layout_height="@dimen/alarm_togglebtn_height"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/toggle_btn"
                    android:checked="false"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_line_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_light"></TextView>
            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/notify_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/notify_text_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/alarm_notify_textview_toleft"
                    android:text="@string/alarm_notify_text_top"
                    android:textColor="@color/gray_light"
                    android:textSize="@dimen/common_textsize_small" />
                <GridView
                    android:id="@+id/notify_gridview"
                    android:listSelector="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numColumns="8"
                    android:layout_below="@id/notify_text_top"
                    android:layout_marginLeft="@dimen/alarm_notify_textview_bottom_toleft">
                </GridView>

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/notify_gridview"
                    android:layout_marginLeft="@dimen/alarm_notify_textview_bottom_toleft"
                    android:text="@string/alarm_notify_text_bottom"
                    android:textColor="@color/gray_light"
                    android:textSize="@dimen/common_textsize_small" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_line_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_light"></TextView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_list_height"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/alarm_take_photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_textsize_middle" />

                <Button
                    android:id="@+id/photo_cloud"
                    android:layout_width="@dimen/alarm_record_btn_cloud"
                    android:layout_height="@dimen/activity_small_button_height_40"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_round_btn_white"
                    android:text="@string/alarm_cloud"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/alarm_record_btn_textsize"/>

                <Button
                    android:id="@+id/photo_local"
                    android:layout_width="@dimen/activity_small_button_width"
                    android:layout_height="@dimen/activity_small_button_height_40"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/photo_cloud"
                    android:background="@drawable/bg_round_btn_white"
                    android:text="@string/alarm_local"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/alarm_record_btn_textsize"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_line_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_light"></TextView>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_list_height"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/alarm_record"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_textsize_middle" />


                <Button
                    android:id="@+id/record_cloud"
                    android:layout_width="@dimen/alarm_record_btn_cloud"
                    android:layout_height="@dimen/activity_small_button_height_40"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_round_btn_white"
                    android:text="@string/alarm_cloud"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/alarm_record_btn_textsize"/>

                <Button
                    android:id="@+id/record_local"
                    android:layout_width="@dimen/activity_small_button_width"
                    android:layout_height="@dimen/activity_small_button_height_40"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/record_cloud"
                    android:background="@drawable/bg_round_btn_white"
                    android:text="@string/alarm_local"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/alarm_record_btn_textsize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_line_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_light"></TextView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="@dimen/alarm_finish_btn_width"
        android:layout_height="@dimen/alarm_finish_btn_height"
        android:layout_marginBottom="@dimen/stranger_conform_btn_margin_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_round_btn"
        android:text="@string/alarm_finish_btn"
        android:textSize="@dimen/common_textsize_big" />

</RelativeLayout>
